--- a/tributetosupdup/src/app/app.component.html
+++ b/tributetosupdup/src/app/app.component.html
@@ -1,3 +1,6 @@
+
+
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <app-main-header></app-main-header>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
