small refactor and side menu

--- a/tributetosupdup/src/app/app.component.html
+++ b/tributetosupdup/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 
 <ion-app>
-  <app-main-header></app-main-header>
+  <app-side-menu></app-side-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
