--- a/tributetosupdup/src/app/home/home.page.html
+++ b/tributetosupdup/src/app/home/home.page.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title class = "centerText">Header</ion-title>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+<app-main-header></app-main-header>
 <ion-content>
   <div id="container">
     <strong>Ready to create an app?</strong>
