--- a/tributetosupdup/src/app/overview/overview.page.html
+++ b/tributetosupdup/src/app/overview/overview.page.html
@@ -1,9 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>overview</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<app-main-header></app-main-header>
 <ion-content>
 
 </ion-content>
