--- a/tributetosupdup/src/app/components/main-header/main-header.component.html
+++ b/tributetosupdup/src/app/components/main-header/main-header.component.html
@@ -1,17 +1,8 @@
-<ion-menu side="start" contentId="main">
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>Profile(placeholder)</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <ion-item>
-        <ion-label>Home</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>Overview</ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-content>
-</ion-menu>
+<ion-header>
+  <ion-toolbar>
+    <ion-title class = "centerText">Header</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
