--- a/tributetosupdup/src/app/selected-stock/selected-stock.page.html
+++ b/tributetosupdup/src/app/selected-stock/selected-stock.page.html
@@ -1,12 +1,36 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title class = "centerText">Header</ion-title>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
+<app-main-header></app-main-header>
 <ion-content>
-  <h1>nothing here yet</h1>
+  <div class = "body" *ngIf = "stock">
+    <div class = "mainTitle">
+      <h1>
+       {{ stock.symbol }}
+      </h1>
+      <h3>
+        {{ stock.company }}
+      </h3>
+    </div>
+  
+    <div class = "tweetList">
+      <ion-list *ngFor = "let tweet of stock.tweets">
+        <div class = "tweet">
+          <ion-item>
+            <ion-avatar slot="start">
+              <img src="./../../assets/icon/supdup.jpg">
+            </ion-avatar>
+            <ion-label text-wrap>
+              <p>
+                SuperDuper Investor@SuperDuperInvst
+              </p>
+              <div>
+                <span>
+                  {{ tweet }}
+                </span>
+              </div>
+            </ion-label>
+          </ion-item>
+        </div>
+      </ion-list>
+    </div>
+  </div>
+  
 </ion-content>
